--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
     --font-size-default: 20px;
     --font-size-emoji: 7px;
     --font-family-default: monospace;
-    --line-height-default: 1.3rem;
+    --line-height-default: 1.5rem;
 }
 
 
